<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="20dp" >

               <TextView
                   android:id="@+id/login_username"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:layout_alignTop="@+id/tv_payment_refno"
                   android:text="@string/txt_refno"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/textView4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/login_username"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/tv_payment_refno"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/textView4"
                   android:text="@string/txt_empty"
                   android:textAppearance="?android:attr/textAppearanceMedium" />
           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="5dp"
               android:paddingTop="10dp" >

               <TextView
                   android:id="@+id/textView2"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:text="@string/txt_txndate"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/textView5"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/textView2"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/tv_payment_txndate"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/textView5"
                   android:text="@string/txt_empty"
                   android:textAppearance="?android:attr/textAppearanceMedium" />
           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="5dp"
               android:paddingTop="10dp" >
               
               
               <TextView
                   android:id="@+id/TextView2"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/payment_option"
                   android:text="@string/txt_option"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/TextView5"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/TextView2"
                   android:layout_alignBaseline="@+id/payment_option"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <Spinner
                   android:id="@+id/payment_option"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/TextView5" />

           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/rl_check"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:orientation="vertical" >
                                      
		           <RelativeLayout
		               android:layout_width="match_parent"
		               android:layout_height="wrap_content"
		               android:paddingBottom="5dp"
		               android:paddingTop="10dp" >
		
		               <TextView
		                   android:id="@+id/TextView3"
		                   android:layout_width="120dp"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/spinner_bank"
		                   android:text="@string/txt_bank"
		                   android:textAppearance="?android:attr/textAppearanceMedium" />
		
		               <TextView
		                   android:id="@+id/TextView6"
		                   android:layout_width="wrap_content"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/spinner_bank"
		                   android:layout_toRightOf="@+id/TextView3"
		                   android:text="@string/semicolon"
		                   android:textAppearance="?android:attr/textAppearanceMedium" />

		               <Spinner
		                   android:id="@+id/spinner_bank"
		                   android:layout_width="wrap_content"
		                   android:layout_height="wrap_content"
		                   android:layout_alignParentBottom="true"
		                   android:layout_alignParentRight="true"
		                   android:layout_alignParentTop="true"
		                   android:layout_marginLeft="5dp"
		                   android:layout_toRightOf="@+id/TextView6" />
		
		           </RelativeLayout>
		           
		           <RelativeLayout
		               android:layout_width="match_parent"
		               android:layout_height="wrap_content"
		               android:paddingTop="5dp" >
		
		               <TextView
		                   android:id="@+id/TextView4"
		                   android:layout_width="120dp"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/et_payment_checkno"
		                   android:text="@string/txt_checkno"
		                   android:textAppearance="?android:attr/textAppearanceMedium" />
		
		               <TextView
		                   android:id="@+id/TextView7"
		                   android:layout_width="wrap_content"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/et_payment_checkno"
		                   android:layout_toRightOf="@+id/TextView4"
		                   android:text="@string/semicolon"
		                   android:textAppearance="?android:attr/textAppearanceMedium" />
		
		               <EditText
		                   android:id="@+id/et_payment_checkno"
		                   android:layout_width="wrap_content"
		                   android:layout_height="wrap_content"
		                   android:layout_alignParentTop="true"
		                   android:layout_marginLeft="5dp"
		                   android:layout_toRightOf="@+id/TextView7"
		                   android:ems="10"
		                   android:inputType="text"
		                   android:textAllCaps="true" />
		                   
		           </RelativeLayout>
		           
		           <RelativeLayout
		               android:layout_width="match_parent"
		               android:layout_height="wrap_content"
		               android:paddingTop="5dp" >
		
		               <TextView
		                   android:id="@+id/TextView9"
		                   android:layout_width="120dp"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/et_payment_checkdate"
		                   android:text="@string/txt_checkdate"
		                   android:textAppearance="?android:attr/textAppearanceMedium" />
		
		               <TextView
		                   android:id="@+id/TextView8"
		                   android:layout_width="wrap_content"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/et_payment_checkdate"
		                   android:layout_toRightOf="@+id/TextView9"
		                   android:text="@string/semicolon"
		                   android:textAppearance="?android:attr/textAppearanceMedium" />

		               <EditText
		                   android:id="@+id/et_payment_checkdate"
		                   android:layout_width="wrap_content"
		                   android:layout_height="wrap_content"
		                   android:layout_alignParentTop="true"
		                   android:layout_centerVertical="true"
		                   android:layout_marginLeft="5dp"
		                   android:layout_marginRight="5dp"
		                   android:layout_toLeftOf="@+id/btn_checkdate"
		                   android:layout_toRightOf="@+id/TextView8"
		                   android:ems="10"
		                   android:inputType="text" />

		               <Button
		                   android:id="@+id/btn_checkdate"
		                   style="?android:attr/buttonStyleSmall"
		                   android:layout_width="50dp"
		                   android:layout_height="wrap_content"
		                   android:layout_alignBaseline="@+id/et_payment_checkdate"
		                   android:layout_alignParentRight="true"
		                   android:layout_alignParentTop="true"
		                   android:layout_centerVertical="true"
		                   android:text="@string/txt_ellipse" />
		               
		           </RelativeLayout>
           
               </LinearLayout>

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="5dp" >

               <TextView
                   android:id="@+id/textView3"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/et_payment_amount"
                   android:text="@string/txt_amount"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/textView6"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/et_payment_amount"
                   android:layout_toRightOf="@+id/textView3"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <EditText
                   android:id="@+id/et_payment_amount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/textView6"
                   android:ems="10"
                   android:inputType="numberDecimal" />
           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/rl_overpayment"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/tv_info_paidby"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/et_overpayment"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentTop="true"
                   android:text="@string/txt_overpayment"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/TextView02"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/tv_info_paidby"
                   android:layout_alignBaseline="@+id/et_overpayment"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <EditText
                   android:id="@+id/et_overpayment"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/TextView02"
                   android:ems="10"
                   android:inputType="numberDecimal" />

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/TextView03"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/et_payment_paidby"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentTop="true"
                   android:text="@string/txt_paidby"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/TextView04"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentTop="true"
                   android:layout_toRightOf="@+id/TextView03"
                   android:layout_alignBaseline="@+id/et_payment_paidby"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <EditText
                   android:id="@+id/et_payment_paidby"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/TextView04"
                   android:ems="10"
                   android:inputType="textPersonName|textCapCharacters"
                   android:textAllCaps="true" >

                   <requestFocus />
               </EditText>

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="20dp"
               android:paddingTop="20dp" >

               <Button
                   android:id="@+id/btn_ok"
                   android:layout_width="80dp"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_centerHorizontal="true"
                   android:layout_centerVertical="true"
                   android:layout_marginRight="20dp"
                   android:text="@string/txt_btn_ok" />

           </RelativeLayout>

       </LinearLayout>

   </ScrollView>