<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:text="@string/txt_fromdate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/textView6"
                android:text="@string/semicolon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_txndate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView6"
                android:paddingLeft="5dp"
                android:text="@string/txt_empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:text="@string/txt_todate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/textView7"
                android:text="@string/semicolon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_collector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView7"
                android:paddingLeft="5dp"
                android:text="@string/txt_empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:text="@string/txt_remarks"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/textView8"
                android:text="@string/semicolon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_info_remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView8"
                android:paddingLeft="5dp"
                android:text="@string/txt_empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:background="@color/divider_color" />

</RelativeLayout>